
syntax = "proto3";

message TimeRequest {}

message TimeResponse { string current_time = 1; }

message SecretMessage {
  string key = 1;

  // Used to determine who got the correct key first.
  string user = 2;
}

message UserSecret { string user = 1; }
// message SecretResponse {
//   bool key_is_correct = 1;
//   string response = 2;
// }

message SecretKey { int32 key = 1; }

message SuccessfullMessage { string message = 1; }

service OmegapointServer {
  rpc GetTime(TimeRequest) returns (TimeResponse) {}
  rpc StreamTime(TimeRequest) returns (stream TimeResponse) {}
  rpc GetSecretMessage(UserSecret) returns (SecretMessage) {
  } // Send user  -> Get a (hashed) key
  rpc AccessSecret(SecretKey) returns (SuccessfullMessage) {
  } // Send key   -> (if correct) get success!
}